# cn-mcp-sdk

./: .env  .gitignore  LICENSE  README.md  agent.db  pyproject.toml
.github/workflows/: ci.yml  pypi-publish.yml
examples/: QUICKSTART.md  README.md  advanced_patterns.py  agentic_use.py  basic_usage.py  create_file.py  database_queries.py  debug_search.py  device_control.py  dynamic_tool_usage.py  error_handling.py  file_download.py  quick_start.py  scheduled_tasks.py  simple.py  terminal_commands.py  web_search.py  web_search_simple.py
src/cn_mcp/: __init__.py  client.py  errors.py
src/cn_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/cn_mcp/modules/: __init__.py  _request.py  auth.py  database.py  devices.py  files.py  scheduler.py  search.py  sessions.py  terminal.py
tests/: test_module_error_handling.py
