[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cn-mcp"
version = "0.3.1"
description = "Python SDK for CircuitNotion MCP Server"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "CircuitNotion", email = "dev@circuitnotion.com"},
]
keywords = [
    "circuitnotion",
    "mcp",
    "sdk",
    "client",
    "api",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/ntirushwajeanmarc/cn-mcp-sdk"
Documentation = "https://github.com/ntirushwajeanmarc/cn-mcp-sdk#readme"
Repository = "https://github.com/ntirushwajeanmarc/cn-mcp-sdk.git"
Issues = "https://github.com/ntirushwajeanmarc/cn-mcp-sdk/issues"

[tool.setuptools]
packages = ["cn_mcp", "cn_mcp.modules"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
cn_mcp = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py310"
